hphp/hack/test/typecheck/higher_kinded_types/reification_unsupported.php.exp
File "reification_unsupported.php", line 3, characters 18-19:
`T2` is a higher-kinded type parameter, standing for a type that has type parameters itself. We don't support reification of parameters like `T2`. (Naming[2047])
File "reification_unsupported.php", line 3, characters 35-36:
`T5` is a generic parameter of another (higher-kinded) generic parameter. We don't support reification of parameters like `T5`. (Naming[2047])
