hphp/hack/test/typecheck/higher_kinded_types/reification_unsupported.php
<?hh

class Test<reify T2<T3>, T4<reify T5>> {}
